Fixed spinner not showing

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -30,7 +30,7 @@ a {
   position: absolute;
   left: 8px;
   width: 16px;
-  background: #fff;
+  background: #3d348b;
   animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
 }
 .lds-facebook div:nth-child(1) {
